<resources>
    <string name="app_name">KneipenApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="listAddress">Adresse:</string>
    <string name="listType">Typ:</string>
    <string name="ListRating">Rating:</string>
    <string name="listRatingContent">Small Text</string>
    <string name="listTypeContent">Small Text</string>
    <string name="listAddressContent">Small Text</string>
    <string name="listBarName">Title</string>

    <array name="stars">
        <item>Kein Filter</item>
        <item>5 Sterne</item>
        <item>4 Sterne</item>
        <item>3 Sterne</item>
        <item>2 Sterne</item>
        <item>1 Stern</item>
    </array>
</resources>
