<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="7dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/listBarName"
        android:id="@+id/barName"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:id="@+id/imageView"
            android:src="@drawable/alte_faerbe" />

        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/listAddress"
                android:id="@+id/textView3"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/listAddressContent"
                android:id="@+id/address"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_columnSpan="3"
                android:layout_gravity="fill_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/listType"
                android:id="@+id/textView"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/listTypeContent"
                android:id="@+id/type"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_marginRight="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/ListRating"
                android:id="@+id/textView2"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/listRatingContent"
                android:id="@+id/rating"
                android:layout_row="2"
                android:layout_column="1" />
        </GridLayout>
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#CCCCCC"
        android:paddingTop="0dp"
        android:layout_marginTop="5dp" />
</LinearLayout>